<resources>
    <string name="app_name">CajaDeArena</string>
    <string name="notifications">Notifications</string>
    <string name="pokedex">Pokedex</string>
    <string name="refresh">Refresh</string>
    <string name="custom_views">Custom Views</string>
    <string name="smiles">Smiles</string>
    <string name="curves">Curves</string>
    <string name="whatsapp_utils">Whatsapp Utils</string>
    <string name="rnc">RNC</string>
    <string name="copy">Copy</string>
    <string name="recipes">Recipes</string>
    <string name="btn_go_to_whatsapp_messages">Whatsapp Messages</string>
    <string name="btn_go_to_whatsapp_bot">Whatsapp Bot</string>
    <string name="whatsapp_bot_enable">Whatsapp bot enable:</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="contact">Contact</string>
    <string name="message">Message</string>
    <string name="response">Response</string>
    <string name="add">Add</string>
    <string name="whatsapp_bot_messages">Whatsapp bot messages</string>
    <string name="coronavirus_stats">Coronavirus stats</string>
    <string name="cases_by_country">Countries</string>
    <string name="cases">cases: %1$s</string>
    <string name="deaths">deaths: %1$s</string>
    <string name="search">Search</string>
    <string name="name_site">Name of Site</string>
    <string name="add_site">Add Site</string>
    <string name="address_of_site">Address of Site</string>
    <string name="interval_of_check_in_minutes_minimum_15_minutes">Interval of check in minutes (15 is minimum)</string>
    <string name="down_detector">Down Detector</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="unknown">Unknown</string>
    <string name="errors_quantity">Error quantity: %1$s</string>
    <string name="interval_of_check">Interval of check: %1$s minutes</string>
    <string name="retries_quantity">Retries quantity:  %1$s</string>
    <string name="o_no_site_down">O no site is down: %1$s</string>
    <string name="test_site">Test Site</string>
    <string name="success_in_test_of">Success in test of %1$s</string>
    <string name="error_in_test_with_code">Success in test of %1$d</string>
    <string name="space_rocket">Space Rocket</string>
    <string name="launch">Launch</string>
    <string name="motion_layout">Motion Layout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="connect">Conectar</string>
    <string name="send">Enviar</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="connecting">Connecting</string>
    <string name="fail_connection">Fail connection</string>
</resources>
