<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_whatsapp_bot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/whatsapp_bot_enable"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@id/btn_whatsapp_bot"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_whatsapp_bot"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/txt_whatsapp_bot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/txt_whatsapp_bot"
            app:layout_constraintTop_toTopOf="@id/txt_whatsapp_bot"
            tools:text="Active" />

        <TextView
            android:id="@+id/txt_title_whatsapp_bot_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/whatsapp_bot_messages"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_whatsapp_bot" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_whatsapp_bot_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/txt_title_whatsapp_bot_messages"
            tools:listitem="@layout/list_item_whatsapp_message_bot" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add"
            app:layout_constraintTop_toBottomOf="@+id/recycler_whatsapp_bot_messages" />

        <TextView
            android:id="@+id/txt_whatsapp_auto_reply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/whatsapp_auto_reply"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@id/btn_whatsapp_auto_reply"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add" />

        <Button
            android:id="@+id/btn_whatsapp_auto_reply"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/txt_whatsapp_auto_reply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/txt_whatsapp_auto_reply"
            app:layout_constraintTop_toTopOf="@id/txt_whatsapp_auto_reply"
            tools:text="Active" />

        <TextView
            android:id="@+id/txt_title_whatsapp_auto_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/whatsapp_bot_messages"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_whatsapp_auto_reply" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_whatsapp_auto_reply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/txt_title_whatsapp_auto_reply"
            tools:listitem="@layout/list_item_whatsapp_message_bot" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>